# CraftBot

./: .gitignore  CMakeLists.txt  README.md
src/: ChatCommandClient.cpp  FarmingTasks.cpp  FarmingTasks.hpp  MapCreationTasks.cpp  MapCreationTasks.hpp
